--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
   "name": "epaynepal",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "Unified Nepali payment gateway SDK",
   "type": "module",
+  "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "node src/index.js",
+    "lint": "node --check src/index.js",
+    "prepare": "npm run lint",
+    "test": "echo \"No automated tests yet\""
   },
   "author": "",
-  "license": "ISC",
-  "description": "",
-  "devDependencies": {
-    "nodemon": "^3.1.11"
+  "license": "MIT",
+  "dependencies": {
+    "axios": "^1.7.7",
+    "zod": "^3.23.8"
   }
 }
